--- a/AzurePipelineProject/AzurePipelineProject.Android/AzurePipelineProject.Android.csproj
+++ b/AzurePipelineProject/AzurePipelineProject.Android/AzurePipelineProject.Android.csproj
@@ -40,6 +40,7 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <AotAssemblies>True</AotAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
