Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,10 @@ steps:
 - task: AndroidSigning@3
   inputs:
     apkFiles: '**/*.apk'
+    apksignerKeystoreFile: 'samplekey'
+    apksignerKeystorePassword: '123456'
+    apksignerKeystoreAlias: 'key0'
+    apksignerKeyPassword: '123456'
 
 - task: CopyFiles@2
   inputs:
