--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,12 +39,12 @@ steps:
 - task: CopyFiles@2
   inputs:
     SourceFolder: $(Build.SourcesDirectory)
-    contents: '**/*.release.apk' 
+    contents: '**/*.apk' 
     targetFolder: '$(build.artifactStagingDirectory)'
     overWrite: true
 
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
+    ArtifactName: 'apkFiles'
     publishLocation: 'Container'
